# Projeto-Haskell

./: README.md  client_session_key.aes  stack.yaml
.stack-work/install/x86_64-linux/lts-7.8/8.0.1/flag-cache/: aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-compat-0.3.6-5wE6V2cyaFcB5no9HXBKW5  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  authenticate-1.3.3.2-9t6gscs0Cuv9BTz9Y1ELoh  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.2-2kD96kJB6JEGow1dP8IL6C  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  cereal-0.5.3.0-90KodwwwQanJlL7equBhpB  (+123 more)
Blog/: Application.hs  Foundation.hs  Main.hs  Settings.hs  Site.hs  blog.cabal  exec.sh  routes
Blog/Handlers/: Admin.hs  Categoria.hs  Contato.hs  Forms.hs  Home.hs  Post.hs  Usuario.hs  Widgets.hs
Blog/Helper/: Functions.hs  Widgets.hs
Blog/static/css/: style.css
Blog/templates/admin/post/: postadd.hamlet  posttable.hamlet
Blog/templates/default/admin/categoria/: categoriaadd.hamlet  categorialista.hamlet
Blog/templates/default/admin/contato/: contatolista.hamlet
Blog/templates/default/admin/post/: post.add.sucesso.hamlet
Blog/templates/default/admin/usuario/: usuariolista.hamlet
Blog/templates/default/home/: categoria.hamlet  home.hamlet  post.hamlet
Blog_BKP_28-04-2017/: Application.hs  Main.hs  client_session_key.aes  routes
Blog_BKP_28-04-2017/Handlers/: Forms.hs  Home.hs  Widgets.hs
Blog_BKP_28-04-2017/templates/default/admin/post/: postlista.hamlet
Blog_BKP_28-04-2017/templates/default/home/: contato.erro.hamlet  contato.hamlet  contato.sucesso.hamlet
trabalho/: Application.hs  Foundation.hs  Home.hs  Main.hs  client_session_key.aes  routes  trabalho.cabal
trabalho/Handler/: Admin.hs  Aluno.hs  Contato.hs  Disciplina.hs  Home.hs  Usuario.hs  Widgets.hs
trabalho/static/css/: style.css
trabalho/templates/: contatotable.hamlet  header.hamlet  table.hamlet
trabalho/templates/admin/: home.hamlet
trabalho/templates/admin/categoria/: categoriatable.hamlet
trabalho/templates/admin/post/: posttable.hamlet
yesod/: Main.hs  yesod.cabal
