name:               blog
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          blog
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    Handlers.Post
                    Handlers.Categoria
                    Handlers.Usuario
                    Handlers.Contato
                    
                    Helper.Functions
                    Handlers.Widgets
                    Site

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-static
                , text                          
                , persistent                    
                , persistent-postgresql
                , monad-logger

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
